Fix Spacing Issues On Tutorial List Page

--- a/static/css/tutorials.css
+++ b/static/css/tutorials.css
@@ -1,5 +1,5 @@
 .tutorial_preview {
-  width: 40%;
+  width: 90%;
   height: 200px;
   display: inline-block;
   margin: 10px 4%;
